crates/trace-facts/tests/ui/trace_fact_spec_ref_requires_origin_key.stderr
error: trace_ref fields must have type OriginExportKey
 --> tests/ui/trace_fact_spec_ref_requires_origin_key.rs:8:10
  |
8 |     key: String,
  |          ^^^^^^
